--- a/books.css
+++ b/books.css
@@ -2,8 +2,8 @@
 
 :root {
   --white: #f3f3f3;
-  --blue: #2185d5;
-  --dark1: #2d4059;
+  --blue: #9321d5;
+  --dark1: #fdfffd;
   --dark2: #3a4750;
 }
 
